appId: com.oficina.catalogo
---
- launchApp:
    clearState: true

# Login como admin
- tapOn: "E-mail"
- inputText: "admin@loja.com"
- tapOn: "Senha"
- inputText: "1234"
- tapOn: "Entrar"

- tapOn: "Admin"
- assertVisible: "Produto Teste Maestro"

# Deleta o produto criado no flow anterior
- tapOn:
    id: "delete-btn-Produto Teste Maestro"
- assertVisible: "Confirmar"
- tapOn: "Excluir"

- assertNotVisible: "Produto Teste Maestro"