appId: com.oficina.catalogo
---
- launchApp:
    clearState: true

- assertVisible: "Oficina de Marias"

- tapOn: "E-mail"
- inputText: "maria@email.com"

- tapOn: "Senha"
- inputText: "1234"

- tapOn: "Entrar"

- assertVisible: "Catálogo"